--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -11,12 +11,32 @@
     "signup": {
         "prompt": "Don't have an account? Sign up",
         "loginPrompt": "Already have an account? Log in",
-        "namePlaceholder": "Full Name",
+        "firstNamePlaceholder": "First name",
+        "lastNamePlaceholder": "Last name",
         "emailPlaceholder": "Email address",
-        "phonePlaceholder": "Phone Number",
+        "phonePlaceholder": "Phone number",
+        "companyPlaceholder": "Company (optional)",
+        "countryCodeLabel": "Country code",
         "passwordPlaceholder": "Create Password",
         "signUpButton": "Sign Up",
-        "requestReceived": "Signup request received! An admin will review it shortly."
+        "requestReceived": "Signup request received! An admin will review it shortly.",
+        "requestError": "We couldn’t send your signup request. Please try again in a moment.",
+        "errors": {
+            "firstName": "Please enter at least 2 characters for the first name.",
+            "lastName": "Please enter at least 2 characters for the last name.",
+            "email": "Enter a valid email address.",
+            "phone": "Enter a valid phone number.",
+            "countryCode": "Select a country code.",
+            "position": "Select a position."
+        },
+        "notification": {
+            "codeSentTitle": "Verification code sent",
+            "codeSentBody": "Please check your inbox and enter the 6-digit code to continue.",
+            "successTitle": "Signup request received",
+            "successBody": "An administrator will review your request and activate access soon.",
+            "errorTitle": "Something went wrong",
+            "errorBody": "Please try again or contact support if the problem persists."
+        }
     },
     "verify": {
         "title": "Verify your email",
@@ -198,6 +218,7 @@
     "actions": {
         "edit": "Edit",
         "delete": "Delete",
+        "close": "Close",
         "save": "Save",
         "cancel": "Cancel"
     },
@@ -286,5 +307,15 @@
         "time": "Time",
         "participants": "Participants",
         "type": "Type"
+    },
+    "legal": {
+        "title": {
+            "impressum": "Imprint",
+            "privacy": "Privacy Policy",
+            "terms": "Website Terms & Conditions"
+        },
+        "lightMode": "Light mode",
+        "darkMode": "Dark mode",
+        "backToDashboard": "Back to dashboard"
     }
 }
