Enhance signup error handling and tests

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -31,7 +31,19 @@
             "email": "يرجى إدخال بريد إلكتروني صالح.",
             "phone": "يرجى إدخال رقم هاتف صالح.",
             "countryCode": "يرجى اختيار رمز الدولة.",
-            "position": "يرجى اختيار المنصب."
+            "position": "يرجى اختيار المنصب.",
+            "badRequest": "تعذّر معالجة البيانات المدخلة. يرجى مراجعة النموذج والمحاولة مرة أخرى.",
+            "unauthorized": "يلزم تسجيل الدخول قبل المتابعة.",
+            "forbidden": "ليست لديك صلاحية لتنفيذ هذا الإجراء.",
+            "notFound": "تعذّر العثور على طلب تسجيل مطابق لبياناتك.",
+            "conflict": "يوجد حساب مسجل بهذا البريد الإلكتروني بالفعل.",
+            "validation": "تبدو بعض البيانات غير صحيحة. يرجى مراجعة النموذج والمحاولة مرة أخرى.",
+            "rateLimited": "تم إجراء محاولات كثيرة. يرجى الانتظار قليلاً ثم المحاولة مجددًا.",
+            "server": "هناك مشكلة في الخادم حالياً. يرجى المحاولة لاحقًا.",
+            "generic": "تعذّر إكمال التسجيل حالياً. يرجى المحاولة مرة أخرى.",
+            "network": "تعذّر الاتصال بالخادم. تحقق من الاتصال ثم أعد المحاولة.",
+            "sessionRequired": "انتهت صلاحية جلسة المسؤول. يرجى تسجيل الدخول مرة أخرى.",
+            "unexpectedResponse": "تلقينا استجابة غير متوقعة من الخادم."
         },
         "notification": {
             "codeSentTitle": "تم إرسال رمز التحقق",
@@ -224,7 +236,8 @@
         "delete": "حذف",
         "save": "حفظ",
         "cancel": "إلغاء",
-        "close": "إغلاق"
+        "close": "إغلاق",
+        "retry": "إعادة المحاولة"
     },
     "chatbot": {
         "toggle": "تبديل الشات بوت",
