chore: apply pending updates

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -9,7 +9,35 @@
         "forgotPassword": "هل نسيت كلمة المرور؟",
         "errors": {
             "invalidCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة.",
-            "generic": "تعذّر إتمام تسجيل الدخول. يرجى المحاولة مرة أخرى."
+            "generic": "تعذّر إتمام تسجيل الدخول. يرجى المحاولة مرة أخرى.",
+            "hint": "إذا كنت متأكدًا من صحة البيانات، يُرجى التواصل مع المسؤول للحصول على المساعدة."
+        }
+    },
+    "passwordReset": {
+        "title": "إعادة تعيين كلمة المرور",
+        "subtitleEmail": "أدخل بريدك الإلكتروني وسنرسل رمز تحقق.",
+        "subtitleVerify": "أدخل رمز التحقق المرسل إلى {email} وقم بتعيين كلمة مرور جديدة.",
+        "emailLabel": "البريد الإلكتروني",
+        "sendCode": "إرسال الرمز",
+        "sending": "جاري الإرسال...",
+        "codeLabel": "رمز التحقق",
+        "passwordLabel": "كلمة المرور الجديدة",
+        "confirmPasswordLabel": "تأكيد كلمة المرور الجديدة",
+        "back": "رجوع",
+        "resetPassword": "تحديث كلمة المرور",
+        "submitting": "جاري التحديث...",
+        "successTitle": "تم تحديث كلمة المرور",
+        "successBody": "تم تغيير كلمة المرور. يمكنك الآن تسجيل الدخول بالمعلومات الجديدة.",
+        "messages": {
+            "codeSent": "أرسلنا رمز التحقق إلى {email}. يرجى التحقق من بريدك الوارد."
+        },
+        "errors": {
+            "emailRequired": "يرجى إدخال البريد الإلكتروني.",
+            "requestFailed": "تعذر بدء عملية إعادة التعيين. يرجى المحاولة مرة أخرى.",
+            "codeAndPasswordRequired": "رمز التحقق وكلمة المرور الجديدة مطلوبان.",
+            "passwordLength": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل.",
+            "passwordMismatch": "كلمتا المرور غير متطابقتين.",
+            "resetFailed": "تعذر تحديث كلمة المرور. يرجى التحقق من الرمز والمحاولة مرة أخرى."
         }
     },
     "signup": {
