--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -9,7 +9,35 @@
         "forgotPassword": "Забыли пароль?",
         "errors": {
             "invalidCredentials": "Неверный адрес электронной почты или пароль.",
-            "generic": "Не удалось выполнить вход. Попробуйте ещё раз."
+            "generic": "Не удалось выполнить вход. Попробуйте ещё раз.",
+            "hint": "Если данные верны, обратитесь к администратору для дальнейшей помощи."
+        }
+    },
+    "passwordReset": {
+        "title": "Сброс пароля",
+        "subtitleEmail": "Введите адрес электронной почты, и мы отправим вам код подтверждения.",
+        "subtitleVerify": "Введите код, отправленный на {email}, и задайте новый пароль.",
+        "emailLabel": "Адрес электронной почты",
+        "sendCode": "Отправить код",
+        "sending": "Отправка...",
+        "codeLabel": "Код подтверждения",
+        "passwordLabel": "Новый пароль",
+        "confirmPasswordLabel": "Подтвердите новый пароль",
+        "back": "Назад",
+        "resetPassword": "Обновить пароль",
+        "submitting": "Обновление...",
+        "successTitle": "Пароль обновлен",
+        "successBody": "Пароль успешно изменён. Теперь вы можете войти с новыми данными.",
+        "messages": {
+            "codeSent": "Мы отправили код подтверждения на {email}. Проверьте почту."
+        },
+        "errors": {
+            "emailRequired": "Введите адрес электронной почты.",
+            "requestFailed": "Не удалось начать процесс сброса. Попробуйте ещё раз.",
+            "codeAndPasswordRequired": "Требуются код подтверждения и новый пароль.",
+            "passwordLength": "Пароль должен содержать не менее 8 символов.",
+            "passwordMismatch": "Пароли не совпадают.",
+            "resetFailed": "Не удалось обновить пароль. Проверьте код и попробуйте снова."
         }
     },
     "signup": {
