--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -9,7 +9,35 @@
         "forgotPassword": "Passwort vergessen?",
         "errors": {
             "invalidCredentials": "E-Mail oder Passwort ist falsch.",
-            "generic": "Anmeldung fehlgeschlagen. Bitte versuche es erneut."
+            "generic": "Anmeldung fehlgeschlagen. Bitte versuche es erneut.",
+            "hint": "Sollten die Angaben korrekt sein, setzen Sie sich bitte mit dem Administrator in Verbindung."
+        }
+    },
+    "passwordReset": {
+        "title": "Passwort zurücksetzen",
+        "subtitleEmail": "Geben Sie Ihre E-Mail-Adresse ein; wir senden Ihnen einen Bestätigungscode.",
+        "subtitleVerify": "Geben Sie den an {email} gesendeten Bestätigungscode ein und legen Sie ein neues Passwort fest.",
+        "emailLabel": "E-Mail-Adresse",
+        "sendCode": "Code senden",
+        "sending": "Wird gesendet...",
+        "codeLabel": "Bestätigungscode",
+        "passwordLabel": "Neues Passwort",
+        "confirmPasswordLabel": "Neues Passwort bestätigen",
+        "back": "Zurück",
+        "resetPassword": "Passwort aktualisieren",
+        "submitting": "Aktualisierung...",
+        "successTitle": "Passwort aktualisiert",
+        "successBody": "Ihr Passwort wurde geändert. Sie können sich jetzt mit den neuen Zugangsdaten anmelden.",
+        "messages": {
+            "codeSent": "Wir haben einen Bestätigungscode an {email} gesendet. Bitte prüfen Sie Ihr Postfach."
+        },
+        "errors": {
+            "emailRequired": "Bitte geben Sie Ihre E-Mail-Adresse ein.",
+            "requestFailed": "Der Reset konnte nicht gestartet werden. Bitte versuchen Sie es erneut.",
+            "codeAndPasswordRequired": "Bestätigungscode und neues Passwort sind erforderlich.",
+            "passwordLength": "Das Passwort muss mindestens 8 Zeichen enthalten.",
+            "passwordMismatch": "Die Passwörter stimmen nicht überein.",
+            "resetFailed": "Das Passwort konnte nicht aktualisiert werden. Bitte prüfen Sie den Code und versuchen Sie es erneut."
         }
     },
     "signup": {
