--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -87,7 +87,7 @@
         "subtitle": "Мы отправили код подтверждения на {email}. Пожалуйста, введите его ниже.",
         "codePlaceholder": "Код подтверждения",
         "button": "Подтвердить и зарегистрироваться",
-        "backButton": "Назад к регистрации",
+        "backButton": "Назад",
         "invalidCode": "Неверный код подтверждения. Пожалуйста, попробуйте еще раз."
     },
     "positions": {
